# vcif-hlo

./: README.md  pyproject.toml
docs/: spec.md
docs/examples/: hf_dbe_closure.py  recursive_definition.py  resolve_references.py
src/vcif_hlo/: __init__.py  bridge_v4cat.py  bridge_vcif.py  cli.py  dag.py  dictionary.py  geometric_currying.py  kernels.py  recognizers.py  tensors.py
src/vcif_hlo/tests/: conftest.py  test_bridge_v4cat.py  test_dag.py  test_dictionary.py  test_geometric_currying_carrier.py  test_kernels.py  test_parity.py  test_recognizers.py  test_tensors.py
